/*
 * $Id: ChangeLog,v 1.3825 2005/02/15 22:01:44 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2005-02-16 05:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/winos.prg
    ! correction on my recent changes on function OS_ISWTSCLIENT().

2005-02-16 05:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/win32prn.prg
    ! reinstate	codes when __WRITE_FONT_INFO_TO_FILE__ is defined (without
      defining this, tests/testw32p.prg with PellesC crashes under WIN98)

2005-02-16 03:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/odbc/odbc.c
    ! define SQLLEN if not defined to enable compilation under standard MSVC 6.0 (Win98)
  * source/rtl/winos.prg
    ! function OS_ISWTSCLIENT() is now guarded with #if(WINVER >= 0x0500)
      to enable compilation under standard MSVC 6.0 (Win98)
  * source/rtl/gtalleg/ssf.h
    ! define al_set_clip if not defined
  * source/rtl/filesys.c
    ! minor change to enable compilation under PellesC
  * contrib/gtwvw/gtwvw.c
    ! comment unused FLASHWINFO variable

  Codes for the following changes are by Przemek and tested by me:

  * include/hbmath.h
    ! do not define HB_MATH_HANDLER if HB_MATH_ERRNO is defined (for MinGW32)
  * source/rtl/math.c
    ! use EOVERFLOW only if defined (for MinGW32)
  * source/rtl/gtwin/gtwin.c
    ! enable TONE() for OpenWatcom and MinGW32 under Win98
  * source/rtl/gtwvt/gtwvt.c
    ! enable TONE() for OpenWatcom and MinGW32 under Win98

2005-02-15 11:48 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbclass.ch
    * Corrected #untranslate rules related to Super, to use #xuntranslate instead, to avoid generalization.

2005-02-15 14:45 UTC+0200 Mindaugas Kavaliauskas <dbtopas at dbtopas.lt>
  * source/vm/hvm.c
   * optimized bit operators to check first if both arguments are numeric
